--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
   <head>
+    <meta name="google-site-verification" content="5a6toFk2kw48OcQvW4Amg1eN4rRSslpKWWx8Cx4FkUc" />
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="google-site-verification" content="5a6toFk2kw48OcQvW4Amg1eN4rRSslpKWWx8Cx4FkUc" />
-    <meta name="google-signin-client_id" content="149645064129-4ak9apr77ggqomrrk9ciu0vi2svh23e8.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="5a6toFk2kw48OcQvW4Amg1eN4rRSslpKWWx8Cx4FkUc.apps.googleusercontent.com" >
 
     <title>VIDEO.MA | <%- title %></title>
 
