certificate https and key verification google map

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,11 +3,12 @@
 
   <head>
 
+    <meta name="google-site-verification" content="5a6toFk2kw48OcQvW4Amg1eN4rRSslpKWWx8Cx4FkUc" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta name="google-signin-client_id" content="149645064129-4ak9apr77ggqomrrk9ciu0vi2svh23e8.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="AIzaSyBtiI8IlZigeb2s9Ao3viXKC3MAxGQrCdw.apps.googleusercontent.com">
 
     <title>VIDEO.MA | <%- title %></title>
 
@@ -29,8 +30,9 @@
     <link href="../css/video_player.css" rel="stylesheet">
     <!-- Bootstrap core JavaScript -->
     <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ&libraries=places"></script>
-    <style type="text/css">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtiI8IlZigeb2s9Ao3viXKC3MAxGQrCdw&libraries=places"
+    type="text/javascript"></script>    
+	<style type="text/css">
 
         .list-group-item a ,.card-link{
             color: #0c0a0a;
