--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -214,7 +214,7 @@
         <h2>Latest Premium <span style="color:#fa9539">Cars</span></h2>
         <p class="lead">Vous êtes à la recherche d'une voiture, où vous cherchez à vendre votre enciens voiture. VIDOR.MA et là pour vous. </p>
         <div class="row">
-
+	<% if(listCars.length > 0 ) { %>
           <% for (var i = 0 ; i < 6; i++) { %>
             <div class="col-md-3  col-lg-3 col-sm-4 col-xs-12" >
               <div class="category-grid-box-1">
@@ -279,7 +279,9 @@
 
             
           <% } %>
-
+	<% } else { %>
+		<p>Liste des annoces encore vide, aidez nous à la remplir </p>.
+	<% } %>
         </div>        
 
 
