--- a/views/pages/add.ejs
+++ b/views/pages/add.ejs
@@ -234,7 +234,7 @@
                                               <div class="heading-font">
                                                   <span class="video-label">Video link</span> <span class="count">1</span></div>
                                               <div class="stm-video-link-unit">
-                                                  <input type="text" placeholder="http://youtube.com/embed/XXXXXX" name="stm_video[]" style="width: 100%;margin-bottom: 26px;height: 40px;line-height: 40px;font-size: 14px;">
+                                                  <input type="text" placeholder="http://youtube.com/watch?v=XXXXXX" name="stm_video[]" style="width: 100%;margin-bottom: 26px;height: 40px;line-height: 40px;font-size: 14px;">
                                                   <div class="stm-after-video" style=""></div>
                                               </div>
                                           </div>
