--- a/views/pages/list.ejs
+++ b/views/pages/list.ejs
@@ -782,7 +782,7 @@
                             </span> 
                         </div>
                         <h3> 
-                          <a href=""><%= Cars[i].title %></a>
+                          <a href="/cars/view/<%= Cars[i].id %>"><%= Cars[i].title %></a>
                         </h3>
                         <p class="location">
                           <i class="fa fa-map-marker"></i>
