--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -41,6 +41,13 @@
 		            <div class="main-content-area clearfix ">
 		               <section class="section-padding no-top gray">
 		                  <div class="container" style="width:90% ;padding-right: 15px;padding-left: 15px;margin-right: auto;margin-left: auto;">
+		                  	<% if(message !== null) { %>
+			                  	<div class="row">
+			                  		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			                  			<span class="badge label label-warning"><%= message %></span>
+			                  		</div>
+			                  	</div>		
+		                  	<% } %>
 		                     <div class="row">
 		                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="margin-left: 25%;color: white;background: white;padding: 22px;">
 		                           <div class="form-grid">
