--- a/views/pages/view.ejs
+++ b/views/pages/view.ejs
@@ -179,10 +179,13 @@
 
         <div class="login-nav">
           <% if ( user !== undefined || user !== null) { %>
-            <h2>Bienvenu </h2>
+            <form method="post" style="width: 222px;">
+              <div class="form-group">
+                <h4 style="font-size: 14px;">Bienvenu</h4>
+              </div>
+            </form>
           <% } else { %>    
          
-            <h2>Bienvenu <%= user.lastname %></h2>
             <form method="post">
                 <div class="form-group">
                   <h4 style="font-size: 14px;">Login or E-mail</h4>
@@ -283,12 +286,14 @@
             <div class="content-box-grid margin-top-20" >
               <img class="card-img-top" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_168662faf00%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_168662faf00%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.4375%22%20y%3D%2296.3375%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" alt="Annonceur Profil"> 
 
+
               <div class="card-body">
                 <h5 class="card-title" style="color: #fc9632;font-weight: 600;"><%= ads.model %></h5>
                 <h5 class="card-title">
                   <span class="fa fa-user"></span>
-                  Annonceur : <%= annoncor.lastname %>
+                  Annonceur : <%= ads.annoncor %>
                 </h5>
+
                 <h5 class="card-title">
                   <span class="fa fa-car"></span>
                   Constructeur : <%= ads.constructeur %>
@@ -301,7 +306,7 @@
                   <span class="fa fa-map-marker"></span> 
                   <%= ads.emplacement %> 
                 </h5>
-              </div>
+              </div>              
               <div class="card-body">
                 <a href="tel:<%= annoncor.phone %>" class="card-link">Contact Téléphone</a>
                 <a href="<%= annoncor.whatapp %>" class="card-link">Contact Whatsapp</a>
